--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with Steller landing page.">
     <meta name="author" content="Devcrud">
-    <title>Steller Landing page | Free Bootstrap 4.1 landing page</title>
+    <title>Sankar Venkatesan</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Steller main styles -->
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="- btn btn-primary rounded ml-4" href="components.html">Copmonents</a>
+                        <a class="- btn btn-primary rounded ml-4" href="components.html">Components</a>
                     </li>
                 </ul>
             </div>
@@ -59,7 +59,7 @@
             <div class="infos">
                 <h6 class="subtitle">hello,I'm</h6>
                 <h6 class="title">Sankar <br> Venkatesan</h6>
-                <p>UI/UX Designer</p>
+                <p>Data Analytics and System Analyst</p>
 
                 <div class="buttons pt-3">
                     <button class="btn btn-primary rounded">HIRE ME</button>
@@ -67,10 +67,12 @@
                 </div>      
 
                 <div class="socials mt-4">
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-facebook"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-google"></i></a>
+                    <!-- <a class="social-item" href="javascript:void(0)"><i class="ti-facebook"></i></a>
+                    <a class="social-item" href="javascript:void(0)"><i class="ti-google"></i></a>-->
                     <a class="social-item" href="javascript:void(0)"><i class="ti-github"></i></a>
-                    <a class="social-item" href="javascript:void(0)"><i class="ti-twitter"></i></a>
+                     <!-- <a class="social-item" href="javascript:void(0)"><i class="ti-twitter"></i></a>-->
+					<a class="social-item" href="javascript:void(0)"><i class="ti-linkedin"></i></a>
+					
                 </div>
             </div>              
             <div class="img-holder">
@@ -104,8 +106,8 @@
                     <img src="assets/imgs/avatar.jpg" alt="" class="img-thumbnail mb-4">
                 </div>
                 <div class="pl-md-4 col-md-9">
-                    <h6 class="title">Sankar</h6>
-                    <p class="subtitle">UI/UX Designer</p>
+                    <h6 class="title">Sankar Venkatesan</h6>
+                    <p class="subtitle">Data Analytics and System Analyst</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, pariatur, aperiam aut autem voluptas odit. Odio ducimus delectus totam sed aliquam sequi praesentium mollitia, illum repudiandae quidem quod, magni magnam.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, eius, nam. Quo praesentium qui temporibus voluptatum, facilis aliquid eligendi fugiat beatae neque inventore non. Laborum repellendus consequatur ullam voluptatum asperiores.</p>
                     <button class="btn btn-primary rounded mt-3">DOWNLOAD CV</button>                   
@@ -126,7 +128,7 @@
                     <div class="custom-card card border">
                         <div class="card-body">
                             <i class="icon ti-crown"></i>
-                            <h5>UI/UX Design</h5>
+                            <h5>Business Insights</h5>
                         </div>
                     </div>
                 </div>
@@ -134,7 +136,7 @@
                     <div class="custom-card card border">
                         <div class="card-body">
                             <i class="icon ti-desktop"></i>
-                            <h5>Web Design</h5>
+                            <h5>System Design</h5>
                         </div>
                     </div>
                 </div>
@@ -142,7 +144,7 @@
                     <div class="custom-card card border">
                         <div class="card-body">
                             <i class="icon ti-mobile"></i>
-                            <h5>App Design</h5>
+                            <h5>Reporting</h5>
                         </div>
                     </div>
                 </div>
@@ -150,14 +152,14 @@
                     <div class="custom-card card border">
                         <div class="card-body">
                             <i class="icon ti-bar-chart"></i>
-                            <h5>SEO</h5>
+                            <h5>Analytics</h5>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- End of Sectoin -->
+    <!-- End of Section -->
 
     <!-- Skills section -->
     <section class="section">
@@ -168,27 +170,51 @@
 
             <div class="row text-left">
                 <div class="col-sm-6">
-                    <h6 class="mb-3">Photoshop</h6>
+                    <h6 class="mb-3">PeopleSoft HCM</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 89%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span>89%</span></div>
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span>100%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <h6 class="mb-3">Web Design</h6>
+                    <h6 class="mb-3">Page Up</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 83%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span>83%</span></div>
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span>100%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <h6 class="mb-3">App Design</h6>
+                    <h6 class="mb-3">SQL</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span>95%</span></div>
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span>100%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <h6 class="mb-3">SEO</h6>
+                    <h6 class="mb-3">IBM Cognos</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span>100%</span></div>
+                    </div>
+                </div>
+				<div class="col-sm-6">
+                    <h6 class="mb-3">Alyterx</h6>
+                    <div class="progress">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span>100%</span></div>
+                    </div>
+                </div>
+				<div class="col-sm-6">
+                    <h6 class="mb-3">Kibana</h6>
+                    <div class="progress">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span>100%</span></div>
+                    </div>
+                </div>
+				<div class="col-sm-6">
+                    <h6 class="mb-3">Power BI</h6>
+                    <div class="progress">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span>100%</span></div>
+                    </div>
+                </div>
+				<div class="col-sm-6">
+                    <h6 class="mb-3">Tableau</h6>
+                    <div class="progress">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><span>100%</span></div>
                     </div>
                 </div>
             </div>  
