--- a/index.html
+++ b/index.html
@@ -127,7 +127,15 @@
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
                         <div class="card-body">
-                            <i class="icon ti-crown"></i>
+                            <i class="icon ti-world"></i>
+                            <h5>HR Systems</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <i class="icon ti-stats-up"></i>
                             <h5>Business Insights</h5>
                         </div>
                     </div>
@@ -143,16 +151,8 @@
                 <div class="col-sm-6 col-md-3 mb-4">
                     <div class="custom-card card border">
                         <div class="card-body">
-                            <i class="icon ti-mobile"></i>
-                            <h5>Reporting</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-3 mb-4">
-                    <div class="custom-card card border">
-                        <div class="card-body">
                             <i class="icon ti-bar-chart"></i>
-                            <h5>Analytics</h5>
+                            <h5>Reporting & Analytics</h5>
                         </div>
                     </div>
                 </div>
@@ -479,9 +479,6 @@
                 </div>                  
             </div>
         </div>  
-        <div id="map">
-            <iframe src="https://snazzymaps.com/embed/61257"></iframe>
-        </div>      
     </section>
     <!-- End of Contact Section -->
 
@@ -490,14 +487,14 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-sm-6">
-                    <p>Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="http://www.devcrud.com" target="_blank">DevCRUD</a></p>
+                    <p>Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="http://www.sankarvenkatesan.tech" target="_blank">Sankar Venkatesan</a></p>
                 </div>
                 <div class="col-sm-6">
                     <div class="socials">
-                        <a class="social-item" href="javascript:void(0)"><i class="ti-facebook"></i></a>
-                        <a class="social-item" href="javascript:void(0)"><i class="ti-google"></i></a>
+                       <!--> <a class="social-item" href="javascript:void(0)"><i class="ti-facebook"></i></a>
+                        <a class="social-item" href="javascript:void(0)"><i class="ti-google"></i></a><-->
                         <a class="social-item" href="javascript:void(0)"><i class="ti-github"></i></a>
-                        <a class="social-item" href="javascript:void(0)"><i class="ti-twitter"></i></a>
+                        <a class="social-item" href="javascript:void(0)"><i class="ti-linkedin"></i></a>
                     </div>
                 </div>
             </div>
